--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<link rel="icon" type="image/svg+xml" href="/images/taskov1ch.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>TASKOV1CH</title>
 	<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
