feat: add custom hook useTheme for theme management with localStorage support

--- a/public/404.html
+++ b/public/404.html
@@ -29,7 +29,6 @@
 			position: relative;
 		}
 
-		/* Grid Background Effect */
 		.grid-bg {
 			position: absolute;
 			inset: 0;
@@ -162,8 +161,7 @@
 	</div>
 
 	<script>
-		// Небольшой скрипт для эффекта "печатания" в консоль браузера
-		console.log("%c TASKOV1CH // TERMINAL ", "background: #000; color: #fbbf24; font-size: 20px; font-weight: bold;");
+		console.log("%c TASKOV1CH // WEBSITE ", "background: #000; color: #fbbf24; font-size: 20px; font-weight: bold;");
 		console.log("Error 404: The requested resource could not be found.");
 	</script>
 </body>
